# implementations

./: .gitignore  Makefile  install_requirements.py  main.py  pyproject.toml  requirements.txt  setup_venv.py
impl/gasp/: lidarencoder.py
impl/rope/: initial.ipynb
